--- a/index.html
+++ b/index.html
@@ -20,7 +20,16 @@
 		<div class="col-xs-12 col-sm-12 col-md-12">
 			<section id="game" class="text-center">
 				<h1 id="title">Music Trivia</h1>
-				
+					<div class="text-center"><h2 id="question">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua.</h2>
+					</div><br>
+					<div id="answers" class="text-center">
+						<button id="ans1" class="btn text-center" value="1">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua. </button><br>
+						<button id="ans2" class="btn text-center" value="2"></button><br>
+						<button id="ans3" class="btn text-center" value="3"></button><br>
+						<button id="ans4" class="btn text-center" value="4"></button><br>
+					</div>
 			</section>
 		</div>
 	</div>
