--- a/index.html
+++ b/index.html
@@ -2,17 +2,18 @@
 <html lang="en-us">
 <head>
 	<meta charset="utf-8">
-	<title></title>
-	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+	<title>Grammy Trivia | Timothy Dry</title>
 	<script
-  src="https://code.jquery.com/jquery-3.1.1.min.js"
-  integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
-  crossorigin="anonymous"></script>
-  <script type="text/javascript" language="javascript" src="assets/javascript/app.js"></script>
-  <link href="https://fonts.googleapis.com/css?family=Mada|Mukta+Vaani" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=New+Rocker" rel="stylesheet">
+  		src="https://code.jquery.com/jquery-3.1.1.min.js"
+ 		integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+  		crossorigin="anonymous"></script>
+  	<script type="text/javascript" language="javascript" src="assets/javascript/app.js"></script>
+	<!--link rel="stylesheet" type="text/css" href="assets/css/reset.css"-->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+  	<link href="https://fonts.googleapis.com/css?family=Mada|Mukta+Vaani" rel="stylesheet">
+  	<link href="https://fonts.googleapis.com/css?family=New+Rocker" rel="stylesheet">
+  	<link rel="stylesheet" type="text/css" href="assets/css/style.css">	
   
 </head>
 <body>
@@ -20,16 +21,19 @@
 		<div class="col-xs-12 col-sm-12 col-md-12">
 			<section id="game" class="text-center">
 				<h1 id="title">Music Trivia</h1>
-					<div class="text-center"><h2 id="question">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua.</h2>
-					</div><br>
-					<div id="answers" class="text-center">
-						<button id="ans1" class="btn text-center" value="1">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua. </button><br>
-						<button id="ans2" class="btn text-center" value="2"></button><br>
-						<button id="ans3" class="btn text-center" value="3"></button><br>
-						<button id="ans4" class="btn text-center" value="4"></button><br>
+				<br>
+				<h4 id="timer"></h4>
+
+				<div class="row">
+					<div class="col-xs-12 col-sm-12 col-md-12 text-center question">
 					</div>
+				</div>
+				
+				<div class="row">
+					<div id="answer" class="col-xs-12 col-sm-12 col-md-12 text-center">
+					</div>
+				</div>
+					
 			</section>
 		</div>
 	</div>
