--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
   		src="https://code.jquery.com/jquery-3.1.1.min.js"
  		integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
   		crossorigin="anonymous"></script>
-  	<script type="text/javascript" language="javascript" src="assets/javascript/app.js"></script>
+  	<script type="text/javascript" src="assets/javascript/app.js"></script>
 	<!--link rel="stylesheet" type="text/css" href="assets/css/reset.css"-->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
-  	<link href="https://fonts.googleapis.com/css?family=Mada|Mukta+Vaani" rel="stylesheet">
+  	<link href="https://fonts.googleapis.com/css?family=Mada%7CMukta+Vaani" rel="stylesheet">
   	<link href="https://fonts.googleapis.com/css?family=New+Rocker" rel="stylesheet">
   	<link rel="stylesheet" type="text/css" href="assets/css/style.css">	
   
