--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
 	<meta charset="utf-8">
 	<title>Grammy Trivia | Timothy Dry</title>
 	<script
-  		src="https://code.jquery.com/jquery-3.1.1.min.js"
- 		integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
-  		crossorigin="anonymous"></script>
+  src="https://code.jquery.com/jquery-3.1.1.js"
+  integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA="
+  crossorigin="anonymous"></script>
   	<script type="text/javascript" src="assets/javascript/app.js"></script>
-	<!--link rel="stylesheet" type="text/css" href="assets/css/reset.css"-->
+	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
-  	<link href="https://fonts.googleapis.com/css?family=Mada%7CMukta+Vaani" rel="stylesheet">
-  	<link href="https://fonts.googleapis.com/css?family=New+Rocker" rel="stylesheet">
+	
+	<link href="https://fonts.googleapis.com/css?family=Mada%7CMukta+Vaani%7CNew+Rocker%7CRock+Salt" rel="stylesheet">
+  	
   	<link rel="stylesheet" type="text/css" href="assets/css/style.css">	
   
 </head>
@@ -26,11 +26,16 @@
 
 				<div class="row">
 					<div class="col-xs-12 col-sm-12 col-md-12 text-center question">
+						<h2 id="question"></h2>
 					</div>
 				</div>
 				
 				<div class="row">
-					<div id="answer" class="col-xs-12 col-sm-12 col-md-12 text-center">
+					<div id="answer" class="col-xs-12 col-sm-12 col-md-12 text-center answer">
+						<button id="ans1" class="btn text-center answers" value="1"></button><br>
+						<button id="ans2" class="btn text-center answers" value="2"></button><br>
+						<button id="ans3" class="btn text-center answers" value="3"></button><br>
+						<button id="ans4" class="btn text-center answers" value="4"></button>
 					</div>
 				</div>
 					
