added js and some styling

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en-us">
 <head>
 	<meta charset="utf-8">
-	<title>Grammy Trivia | Timothy Dry</title>
+	<title>Music Trivia | Timothy Dry</title>
+	<link rel="icon" href="assets/images/favicon.ico">
 	<script
   src="https://code.jquery.com/jquery-3.1.1.js"
   integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA="
