game working need to set timing of events

--- a/index.html
+++ b/index.html
@@ -26,17 +26,20 @@
 				<h4 id="timer"></h4>
 
 				<div class="row">
-					<div class="col-xs-12 col-sm-12 col-md-12 text-center question">
+					<div class="col-xs-12 col-sm-12 col-md-12 text-center">
 						<h2 id="question"></h2>
 					</div>
 				</div>
 				
 				<div class="row">
-					<div id="answer" class="col-xs-12 col-sm-12 col-md-12 text-center answer">
+					<div id="answer" class="col-xs-12 col-sm-12 col-md-12 text-center">
 						<button id="ans1" class="btn text-center answers" value="1"></button><br>
 						<button id="ans2" class="btn text-center answers" value="2"></button><br>
 						<button id="ans3" class="btn text-center answers" value="3"></button><br>
 						<button id="ans4" class="btn text-center answers" value="4"></button>
+					</div>
+					<div class="text-center">
+						<button id="reset" class="btn text-center answers" value="reset">RESET!</button>
 					</div>
 				</div>
 					
