--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			<section id="game" class="text-center">
 				<h1 id="title">Music Trivia</h1>
 				<br>
-				<h4 id="timer"></h4>
+				<h4 id="time"></h4>
 
 				<div class="row">
 					<div class="col-xs-12 col-sm-12 col-md-12 text-center">
@@ -33,6 +33,7 @@
 				
 				<div class="row">
 					<div id="answer" class="col-xs-12 col-sm-12 col-md-12 text-center">
+						<button id="correct" class="btn text-center"></button>
 						<button id="ans1" class="btn text-center answers" value="1"></button><br>
 						<button id="ans2" class="btn text-center answers" value="2"></button><br>
 						<button id="ans3" class="btn text-center answers" value="3"></button><br>
