--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	
 	<link href="https://fonts.googleapis.com/css?family=Mada%7CMukta+Vaani%7CNew+Rocker%7CRock+Salt" rel="stylesheet">
-  	
+	<link href="https://fonts.googleapis.com/css?family=Space+Mono:700" rel="stylesheet">
   	<link rel="stylesheet" type="text/css" href="assets/css/style.css">	
   
 </head>
@@ -41,6 +41,7 @@
 					</div>
 					<div class="text-center">
 						<button id="reset" class="btn text-center answers" value="reset">RESET!</button>
+						<button id="pict" class="btn text-center"></button>
 					</div>
 				</div>
 					
