--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 				<h1 id="title">Music Trivia</h1>
 				<br>
 				<h4 id="time"></h4>
-
 				<div class="row">
 					<div class="col-xs-12 col-sm-12 col-md-12 text-center">
+						<br>
 						<h2 id="question"></h2>
 					</div>
 				</div>
@@ -44,7 +44,8 @@
 						<button id="pict" class="btn text-center"></button>
 					</div>
 				</div>
-					
+				<audio id="myaudio">
+  				</audio>	
 			</section>
 		</div>
 	</div>
