--- a/index.html
+++ b/index.html
@@ -22,17 +22,18 @@
 		<div class="col-xs-12 col-sm-12 col-md-12">
 			<section id="game" class="text-center">
 				<h1 id="title">Music Trivia</h1>
-				<br>
+				<br> <!-- display timer below-->
 				<h4 id="time"></h4>
 				<div class="row">
 					<div class="col-xs-12 col-sm-12 col-md-12 text-center">
-						<br>
+						<br> <!-- display questions in this div -->
 						<h2 id="question"></h2>
 					</div>
 				</div>
 				
 				<div class="row">
 					<div id="answer" class="col-xs-12 col-sm-12 col-md-12 text-center">
+						<!-- display answers here -->
 						<button id="correct" class="btn text-center"></button>
 						<button id="ans1" class="btn text-center answers" value="1"></button><br>
 						<button id="ans2" class="btn text-center answers" value="2"></button><br>
@@ -40,10 +41,12 @@
 						<button id="ans4" class="btn text-center answers" value="4"></button>
 					</div>
 					<div class="text-center">
+						<!-- display reset button at games end and pictures of correct answers here -->
 						<button id="reset" class="btn text-center answers" value="reset">RESET!</button>
 						<button id="pict" class="btn text-center"></button>
 					</div>
 				</div>
+				<!-- play sound effects here -->
 				<audio id="myaudio">
   				</audio>	
 			</section>
@@ -52,6 +55,7 @@
 
 	<footer class="row">
 		<div class="col-xs-12 col-sm-12 col-md-12 text-center">
+		<!-- set up footer -->
 		<h4>Copyright &copy; Timothy Dry 2017</h4>
 		</div>
 	</footer>
