updated link in footer

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 		<div class="col-xs-12 col-sm-12 col-md-12 text-center">
 		<!-- set up footer -->
 			<h4>
-				<a href="https://boiling-earth-34417.herokuapp.com" target="_blank">Copyright &copy; Timothy Dry 2017</a>
+				<a href="https://timothy-dry.herokuapp.com/" target="_blank">Copyright &copy; Timothy Dry 2017</a>
 			</h4>
 		</div>
 	</footer>
